chore: add twin config

--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
