--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
