--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
